@@ -16,18 +16,16 @@
 
 package com.gmail.zariust.odspecialevents;
 
-import java.util.Arrays;
-import java.util.List;
-
 import com.gmail.zariust.common.Verbosity;
 import com.gmail.zariust.otherdrops.special.SpecialResult;
 import com.gmail.zariust.otherdrops.special.SpecialResultHandler;
 
+import java.util.List;
+
 public class ExplosionEvents extends SpecialResultHandler {
     @Override
     public SpecialResult getNewEvent(String name) {
-        if (name.equalsIgnoreCase("EXPLOSION"))
-            return new ExplodeEvent(this);
+        if (name.equalsIgnoreCase("EXPLOSION")) return new ExplodeEvent(this);
         return null;
     }
 
@@ -38,7 +36,7 @@ public class ExplosionEvents extends SpecialResultHandler {
 
     @Override
     public List<String> getEvents() {
-        return Arrays.asList("EXPLOSION");
+        return List.of("EXPLOSION");
     }
 
     @Override
